--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "biome check --unsafe --no-errors-on-unmatched --files-ignore-unknown=true ./",
     "format": "biome check --write --unsafe --no-errors-on-unmatched --files-ignore-unknown=true ./",
     "preview": "vite preview",
-    "postinstall": "bunx simple-git-hooks"
+    "postinstall": "bunx simple-git-hooks",
+    "generate-api": "rimraf ./src/types/schema.ts && openapi-typescript ./src/assets/openapi.yaml -o ./src/types/schema.ts"
   },
   "simple-git-hooks": {
     "pre-commit": "bunx lint-staged"
@@ -23,11 +24,17 @@
     ]
   },
   "dependencies": {
+    "@bitcoin-js/tiny-secp256k1-asmjs": "^2.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@scalar-lab/bitcoin-vault": "^0.0.33",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-query": "^5.66.5",
+    "bitcoinjs-lib": "^6.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
+    "openapi-fetch": "^0.13.4",
+    "openapi-react-query": "^0.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
@@ -43,8 +50,12 @@
     "@vitejs/plugin-react": "^4.3.4",
     "globals": "^15.14.0",
     "lint-staged": "^15.4.3",
+    "openapi-typescript": "^7.6.1",
     "simple-git-hooks": "^2.11.1",
     "typescript": "~5.7.2",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-plugin-top-level-await": "^1.5.0",
+    "vite-plugin-wasm": "^3.4.1"
   }
 }
