--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@scalar-lab/bitcoin-vault": "^0.0.33",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.5",
+    "@tanstack/react-router": "^1.105.0",
     "bitcoinjs-lib": "^6.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -47,6 +48,8 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.19.0",
+    "@tanstack/router-devtools": "^1.105.0",
+    "@tanstack/router-plugin": "^1.105.0",
     "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
