--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "openapi-react-query": "^0.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1",
     "viem": "^2.23.2",
     "wagmi": "^2.14.11"
   },
@@ -61,6 +63,7 @@
     "typescript": "~5.7.2",
     "vite": "^6.1.0",
     "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-plugin-svgr": "^4.3.0",
     "vite-plugin-top-level-await": "^1.5.0",
     "vite-plugin-wasm": "^3.4.1"
   }
