--- a/package.json
+++ b/package.json
@@ -25,7 +25,14 @@
   },
   "dependencies": {
     "@bitcoin-js/tiny-secp256k1-asmjs": "^2.2.3",
+    "@hookform/resolvers": "^4.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@rainbow-me/rainbowkit": "^2.2.3",
     "@scalar-lab/bitcoin-vault": "^0.0.33",
     "@tailwindcss/vite": "^4.0.6",
@@ -34,22 +41,29 @@
     "bitcoinjs-lib": "^6.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "openapi-fetch": "^0.13.4",
     "openapi-react-query": "^0.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
     "viem": "^2.23.2",
-    "wagmi": "^2.14.11"
+    "wagmi": "^2.14.11",
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.19.0",
+    "@optimize-lodash/rollup-plugin": "^5.0.2",
+    "@tanstack/react-query-devtools": "^5.66.7",
     "@tanstack/router-devtools": "^1.105.0",
     "@tanstack/router-plugin": "^1.105.0",
     "@types/node": "^22.13.4",
