--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@rainbow-me/rainbowkit": "^2.2.3",
-    "@scalar-lab/bitcoin-vault": "^0.0.33",
+    "@scalar-lab/bitcoin-vault": "^0.0.34",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-router": "^1.105.0",
-    "bitcoinjs-lib": "^6.1.7",
+    "bitcoinjs-lib": "^7.0.0-rc.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
