--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "type-check": "tsc -b",
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "biome check --unsafe --no-errors-on-unmatched --files-ignore-unknown=true ./",
     "format": "biome check --write --unsafe --no-errors-on-unmatched --files-ignore-unknown=true ./",
