--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@hookform/resolvers": "^4.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@cosmjs/proto-signing": "^0.33.0",
+    "@cosmjs/stargate": "^0.33.0",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
@@ -40,11 +42,12 @@
     "@scalar-lab/bitcoin-vault": "^0.0.34",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.5",
-    "@tanstack/react-router": "^1.105.0",
+    "@tanstack/react-router": "1.105.0",
     "@tanstack/react-table": "^8.21.2",
     "bitcoinjs-lib": "^7.0.0-rc.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cosmjs-types": "^0.9.0",
     "ethers": "^6.13.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
@@ -70,6 +73,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.19.0",
+    "@keplr-wallet/types": "^0.12.190",
     "@optimize-lodash/rollup-plugin": "^5.0.2",
     "@tanstack/react-query-devtools": "^5.66.7",
     "@tanstack/router-plugin": "^1.105.0",
