--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@cosmjs/stargate": "^0.33.0",
     "@cosmjs/tendermint-rpc": "^0.33.0",
     "@hookform/resolvers": "^4.1.2",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -73,7 +74,6 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@eslint/js": "^9.19.0",
     "@keplr-wallet/types": "^0.12.190",
     "@optimize-lodash/rollup-plugin": "^5.0.2",
     "@tanstack/react-query-devtools": "^5.66.7",
