--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
+    "ts-proto": "^2.6.1",
     "usehooks-ts": "^3.1.1",
     "viem": "^2.23.2",
     "wagmi": "^2.14.11",
