--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@rainbow-me/rainbowkit": "^2.2.3",
     "@scalar-lab/bitcoin-vault": "^0.0.34",
+    "@scalar-lab/scalarjs-sdk": "0.0.1",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-router": "1.105.0",
@@ -66,7 +67,6 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
-    "ts-proto": "^2.6.1",
     "usehooks-ts": "^3.1.1",
     "viem": "^2.23.2",
     "wagmi": "^2.14.11",
