--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@rainbow-me/rainbowkit": "^2.2.3",
     "@scalar-lab/bitcoin-vault": "^0.0.34",
-    "@scalar-lab/scalarjs-sdk": "link:@scalar-lab/scalarjs-sdk",
+    "@scalar-lab/scalarjs-sdk": "0.0.2",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-router": "1.105.0",
