--- a/package.json
+++ b/package.json
@@ -56,8 +56,9 @@
     "cosmjs-types": "^0.9.0",
     "ethers": "^6.13.5",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.475.0",
+    "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
+    "numeral": "^2.0.6",
     "openapi-fetch": "^0.13.4",
     "openapi-react-query": "^0.3.0",
     "react": "^19.0.0",
@@ -66,6 +67,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.7",
+    "recharts": "^2.15.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
@@ -83,6 +85,7 @@
     "@tanstack/react-query-devtools": "^5.66.7",
     "@tanstack/router-plugin": "^1.105.0",
     "@types/node": "^22.13.4",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
@@ -96,5 +99,8 @@
     "vite-plugin-svgr": "^4.3.0",
     "vite-plugin-top-level-await": "^1.5.0",
     "vite-plugin-wasm": "^3.4.1"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
