--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "cosmjs-types": "^0.9.0",
+    "dayjs": "^1.11.13",
     "ethers": "^6.13.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
